ACT variants: MetaWorld MT-1 implementation with StandardACT and ModifiedACT
- Implemented two ACT variants for comparison
- StandardACT: images only in decoder (18.74M parameters)
- ModifiedACT: images in encoder + decoder (25.43M parameters)
- Training pipeline for 50 epochs on MetaWorld shelf-place-v3 task
- Comprehensive evaluation and comparison framework
- Professional documentation and organization
- Models uploaded to HuggingFace Hub

Note: Large checkpoint files excluded (>100MB) - available at HuggingFace Hub

--- a/.gitignore
+++ b/.gitignore
@@ -33,11 +33,13 @@ data/
 *.hdf5
 *.h5
 
-# Checkpoints
-checkpoints/
+# Large Model Checkpoints - TOO LARGE FOR GITHUB
+# Use Git LFS or HuggingFace Hub for these
 experiments/
+checkpoints/
 *.pth
-*.ckpt
+*.pt
+demonstrations/
 
 # Videos
 videos/
@@ -64,9 +66,8 @@ Thumbs.db
 .ipynb_checkpoints/
 *.ipynb
 
-# Results
-results/
-plots/
-*.png
-*.jpg
-*.jpeg
+# Large temporary files
+temp/
+tmp/
+*.tar.gz
+*.zip
