Clean up repository: remove documentation files, organize structure
- Removed all markdown documentation files except README
- Removed Extra explanation files/ and Guides/ folders
- Removed temporary evaluation folders (test runs)
- Removed video folders (too large for git)
- Removed log files
- Updated .gitignore to exclude videos, logs, and docs
- Reorganized test files into tests/ folder
- Created clean README with project structure and current status
- Added final evaluation results
- Added video generation scripts
- Updated model configurations and evaluation scripts

Current status:
- StandardACT and ModifiedACT trained (50 epochs)
- Both models achieve 0% success rate
- Root cause: low-quality dataset (56.7% success, only 4/39 dims)
- Next steps: improve data collection and retrain

--- a/.gitignore
+++ b/.gitignore
@@ -41,8 +41,10 @@ checkpoints/
 *.pt
 demonstrations/
 
-# Videos
+# Videos and evaluation outputs
 videos/
+evaluation_videos/
+evaluation_videos_multi_angle/
 *.mp4
 *.avi
 
@@ -50,6 +52,23 @@ videos/
 logs/
 wandb/
 *.log
+
+# Temporary evaluation results
+evaluation_results_test*/
+quick_test_eval/
+verification_test/
+rerun_evaluation/
+
+# Documentation (keep only README.md)
+Extra explanation files/
+Guides/
+*_REPORT.md
+*_ANALYSIS.md
+*_GUIDE.md
+*_STATUS.md
+*_SUMMARY.md
+*_PLAN.md
+*_CHECKLIST.md
 
 # IDE
 .vscode/
