--- a/.gitignore
+++ b/.gitignore
@@ -37,16 +37,17 @@ data/
 # Use Git LFS or HuggingFace Hub for these
 experiments/
 checkpoints/
+checkpoints_*/
 *.pth
 *.pt
 demonstrations/
 
-# Videos and evaluation outputs
-videos/
-evaluation_videos/
-evaluation_videos_multi_angle/
-*.mp4
-*.avi
+# Reference implementation (keep locally, don't push)
+ACT-original/
+
+# Videos and evaluation outputs (keep plots and comparison images)
+# *.mp4
+# *.avi
 
 # Logs
 logs/
@@ -59,16 +60,17 @@ quick_test_eval/
 verification_test/
 rerun_evaluation/
 
-# Documentation (keep only README.md)
+# Documentation - Keep important analysis docs
 Extra explanation files/
 Guides/
-*_REPORT.md
-*_ANALYSIS.md
-*_GUIDE.md
-*_STATUS.md
-*_SUMMARY.md
+# Keep: ROOT_CAUSE_ANALYSIS.md, FINAL_EXPERIMENT_RESULTS.md
+ACT_Virtual_*.md
+CORRECTED_*.md
 *_PLAN.md
 *_CHECKLIST.md
+PROPER_TRAINING_SUMMARY.md
+TESTING_READY.md
+RESULTS.md
 
 # IDE
 .vscode/
